--- a/edwin_2019/chapter-research-settings.tex
+++ b/edwin_2019/chapter-research-settings.tex
@@ -193,7 +193,7 @@ RQ6：仿冒应用的上架行为是否有特征？
 % 本研究的仿冒应用列表为针对50个热度最高的目标应用整理而成，而收集评论的应用在整个市场范围内随机挑选，此处仿冒应用占总体应用比例较小，不意味整个市场中的仿冒应用数量偏少。
 
 
-\subsection{相关数据集}
+\subsection{相关数据集对比}
 
 作为软件工程方向的研究热点，Android应用研究一直广受关注。
 在Android应用数据集方面，为推进Android恶意应用研究，一些安全厂商整理出了恶意应用数据集，使研究者免于数据收集之苦；部分论文中亦有公开的Android应用集可供参考。
