--- a/edwin_2019/chapter-future.tex
+++ b/edwin_2019/chapter-future.tex
@@ -2,59 +2,25 @@
 \label{chp:future}
 
 \section{总结}
-% In this paper we first introduce the concept of fake apps, and study specifically towards these apps.
-在本文中，``仿冒应用''这个概念被率先引入。
-然后，本文对这一方面进行了专门的研究，还搜集了大量的相关样本以辅助调查。
-% To the best of our knowledge, we are the first to conduct a comprehensive empirical study on a large-scale fake apps.
-本文的前期调研结果显示，本课题是第一个针对仿冒应用进行大规模全面实证研究的课题。
+本文率先引入了``仿冒应用''这一概念。
+在在搜集了大量数据的前提下，对仿冒应用从两个不同角度先后进行了两次实证研究，获取了仿冒应用的基本特性和仿冒应用开发者的行为特征，并推出了仿冒应用检测框架\mytool ，有一定现实意义。
+具体地，本文主要工作总结如下：
 
-% To better understand the ecosystem nature of this type of apps, we obtained more than 150,000 data entries from real-world markets, observed and measured the fake samples among this dataset from several dimensions including certificate information, app size, app name and package name, time factor and so on.
-为了更好地了解这个类型的应用的生态环境，本文基于Python 3设计实现了仿冒应用收集框架\mytool，利用基于BFS的算法收集了来自现实世界中各个应用市场的近14万个应用样本，并且从多个不同维度，对这个数据库里面的仿冒样本进行了观测和考察。
-这些维度包括了APK包中的安全证书信息、应用大小、应用名、包名和时间因素等等。
+1）引入了``仿冒应用''的概念，对仿冒应用的危害进行了简要分析，并借助Janus对收集了来自现实世界中29个应用来源的近14万个应用样本，获取了样本的证书信息、应用大小、应用名等信息，组成数据集。
 
-% Through our measurements we gain valuable experience on fake apps from several perspectives, findings like fake samples' naming tendency and fake developers' evasive strategies are inferred.
-然后，本工作将收集到的数据分为了\emph{仿冒应用的基本特征}、\emph{影响仿冒应用数量的因素}和\emph{仿冒应用的发展轨迹}三个不同视角进行了测量，获得如仿冒应用的命名倾向和仿冒应用开发者对市场监管防御机制的规避策略等信息。
-% To support our findings, we further present a few study cases which provide us a more detailed look into fake apps to back our discoveries on fake app ecosystem.
-为了佐证本文的发现，本研究在每个视角解读之后给出了从数据集中挑选的几个研究案例，呈现了如仿冒应用开发者对不同热门应用的仿冒方式的内容。
-这几个案例进一步深化了本文对仿冒应用生态系统的发现。
+2）利用上述数据集，分别从仿冒应用与原版应用相似度、影响应用被仿冒的严重程度的因素及仿冒应用行为入手开展实证研究，结合实际案例，对仿冒应用的基本特征进行分析，推断出``仿冒应用作者更倾向重新制作仿冒应用，而非通过重打包方式制作仿冒应用''的结论。
 
-之后，本文还收集了部分仿冒样本在商场上对应的评论和评级，排查仿冒应用是否利用了排名欺诈。
-由于现有的排名欺诈检测手段尚有不足，本工作创新性地分别利用两种创新的研究方法---基于用户行为的用户可信度验证和基于NLP的评论内容相似度验证，对数据中的排名欺诈行为进行了排查。
-结果显示，刷好评的排名欺诈行为的确存在于应用市场中，在本工作搜集到的仿冒应用评论中就有刷好评的痕迹。
+3）利用数据集中的另一部分数据，完成面向仿冒应用开发者行为特征的实证研究，透过开发者可利用Android调试证书上传应用、仿冒应用开发者证书可长时间活跃等现象，推断出现有应用市场在监管方面的不足。
+
+4）在完成上述两次实证研究后，有针对性地分别向普通用户、开发者与应用市场方三个不同群体提出了切实可行的实用建议。
+
+5）设计并实现了仿冒应用检测框架\mytool ，利用系统实验说明了\mytool 的可用性。
 
 
 \section{展望}
 
-在大规模分析的部分中，本文中用到了三个不同的角度分别探索仿冒应用的特征，但回顾探索过程，一些方法和步骤依然不够深入。
-如果能从以下三个角度再向仿冒应用入手研究，或许能有更多有所裨益的发现：
-
-\begin{itemize}
-    \item 应用图标:
-    本文在进行案例研究中发现，不少仿冒应用的图标和原版官方应用的图标其实十分相像。
-    因此，图标也可以是一个用于发掘/鉴别仿冒应用的突破口，研究者也许可以从应用图标中挖掘到更多可用的信息与行为模式。
-    碍于时间因素所限，本文研究中并未加入图像对比处理部分提取各APK包中的图标与官方应用的图标进行比对，但如果能研究出快速比对多个应用间图标、图像相似度的算法，定当对应用市场的安全监管筛选机制有所好处。
-
-    \item 应用内代码/文本/链接/ip分析：
-    代码分析可以有效地剖析应用的行为，而相似的文本资源、链接等信息也可以提供各个App之间可能存在的关联关系。
-    遗憾的是，从当前技术水平出发，仔细地对一个App进行完整而全面的静态分析所需时长太长，而动态分析需要测试样例驱动，自动化的动态测试工具往往未能深入拓展一个应用的大部分核心功能。
-    因此，开发出快速的分析算法对App进行更深入的探索，就能挖掘出有关仿冒应用生态的更多信息。
-
-    \item 仿冒应用总量的变化原因：
-    \fullref{chp:discoveries}中提及到了Janus收集到的仿冒应用数量并非一直保持上升趋势。
-    近年来，能搜集到的仿冒应用数量有突然下跌、甚至渐渐式微的迹象。
-    究竟是什么因素导致了这个原因？是移动黑灰产内部的变化，还是安全厂商日益紧密的封锁？
-    这将会是一个十分有趣的课题。
-\end{itemize}
-
-而在评论分析的部分中，也有可以继续发掘的部分。
-在现阶段，学界关于排名欺诈的研究一直在针对积极评价方面，但是对应用差评进行排名欺诈的相关研究却有待补充。
-刷好评可以提高应用评价提升应用排名，如果反其道而行之，用差评对目标应用进行攻击，其实也可以降低目标应用的评价，对其排名进行打击。
-另外，在实际上，用户给的差评中含有相当多的有用信息。
-用户对应用的不满、功能上的建议、bug的反馈，都可以反映在差评上。
-关于用户差评，还有很多的研究空间。
-
-最后，\mytool 框架本身，无论是代码层面还是设计层面，也有值得改善的地方。
-比如是否能结合自动化爬虫框架提高爬虫模块的鲁棒性（对抗应用商店的反爬虫技术、下载稳定性），工具本身的代码优化，还有工具整体的易用性、稳定性等。
-
-总之，从整体上看，本文的工作还有很多可以深化的部分。
-然而，诚希望本文研究的结果能够为移动安全产业的从业人员（不论是工业界或学术界）提供足够的信息，以改善移动安全界的现状；或是抛砖引玉，在让读者对移动应用黑色产业有更多认识的同时，激发读者对仿冒应用等方面的研究兴趣，并从上述几点出发，为后人带来更多深入而完善的相关研究。
+本研究致力于展现一个面向仿冒应用的清晰视角，并通过设计\mytool 协助市场方提升仿冒应用对仿冒应用的拦截能力。
+然而，在研究中仍有几点问题，可作为未来工作的方向。
+其一为对仿冒应用基本特征的实证研究中未涉及与代码、应用行为相关的具体研究，若能分析仿冒应用的行为并总结出一类特征，将十分有助于后续检测。
+其二为\mytool 中\componentB 的代码信息获取部分。现时方案还无法追踪用户的Java反射调用相关代码。
+其三为\mytool 仍对人工有较强依赖，包括对输出的结果进行确认判断和规则的分析提取。尽管人工审核在安全领域难以避免，但在未来工作中或许可为\mytool 添加一个自动分析模块，减少在特征分析上的所需人力。
