--- a/edwin_2019/chapter-future.tex
+++ b/edwin_2019/chapter-future.tex
@@ -22,5 +22,5 @@
 本研究致力于展现一个面向仿冒应用的清晰视角，并通过设计\mytool 协助市场方提升仿冒应用对仿冒应用的拦截能力。
 然而，在研究中仍有几点问题，可作为未来工作的方向。
 其一为对仿冒应用基本特征的实证研究中未涉及与代码、应用行为相关的具体研究，若能分析仿冒应用的行为并总结出一类特征，将十分有助于后续检测。
-其二为\mytool 中\componentB 的代码信息获取部分。现时方案还无法追踪用户的Java反射调用相关代码。
+其二为\mytool 中\componentB 的代码信息获取部分，现时方案还无法追踪用户的Java反射调用相关代码；\mytool 的图标匹配部分也有待加强以提高灵敏度。
 其三为\mytool 仍对人工有较强依赖，包括对输出的结果进行确认判断和规则的分析提取。尽管人工审核在安全领域难以避免，但在未来工作中或许可为\mytool 添加一个自动分析模块，减少在特征分析上的所需人力。
