--- a/edwin_2019/chapter-research-settings.tex
+++ b/edwin_2019/chapter-research-settings.tex
@@ -123,10 +123,10 @@ RQ6：仿冒应用的上架行为是否有特征？
 	\item 对于收集到的大量数据，研究者需要一个轻量级的解决方案快速判断获得的App样本为正版应用或是仿冒应用。
 \end{itemize}
 
-为应对第一个挑战，作者与工业界合作，利用犇众信息公司的Janus平台对各大应用商店进行样本爬取，获取应用样本信息。
+为应对第一个挑战，作者与工业界合作，利用犇众信息公司的Janus平台\footnote{此处平台与\secref{sec:signature}中提及的Android漏洞同名，但两者无直接关联，请注意区分。后文的``Janus平台''均指本平台，而``Janus漏洞''则特指Android漏洞。}对各大应用商店进行样本爬取，获取应用样本信息。
 该平台自2017年起就开始对各大应用商店的App进行样本收集，可向用户提供各项App信息。
 如\autoref{fig:Janus-data}显示，Janus平台至今已收集到上千万个App样本，可满足本研究数据采集需求。
-除样本信息外，Janus也提供按规则搜索功能，用户可创建规则过滤平台中的应用数据，以获取所需应用App样本。
+除样本信息外，Janus平台也提供按规则搜索功能，用户可创建规则过滤平台中的应用数据，以获取所需应用App样本。
 因此，视Janus平台为从各大应用市场中收集应用样本的代理，借助Janus平台获取各市场中的应用信息。
 
 \begin{figure}[htbp]
@@ -141,7 +141,7 @@ RQ6：仿冒应用的上架行为是否有特征？
 为应对第二个挑战，本研究提出了基于广度优先搜索（Breadth-First Search，简称BFS）算法的搜索框架\autoref{fig:FakeRevealer}。
 具体地，对于每一款目标应用的收集流程分为三个部分：先以正版应用样本的\emph{包名}和\emph{应用名}作为查询条件放入迭代搜索器，迭代搜索器发出查询请求，从Janus平台中收集与目标应用相关的所有App样本，提取出样本的相关数据返回至应用收集器;
 其后，应用收集器将数据转移至应用过滤器，利用过滤器判断收集到的应用数据源于正版应用或仿冒应用，保存仿冒应用数据，提取出正版应用的\emph{包名}和\emph{应用名}；
-最后，将上一步中获得的新的正版应用信息（\emph{包名}和\emph{应用名}）再次放入迭代搜索器，开始下一次循环，从Janus中进行查询，获取更多与正版应用相关的样本。
+最后，将上一步中获得的新的正版应用信息（\emph{包名}和\emph{应用名}）再次放入迭代搜索器，开始下一次循环，从Janus平台中进行查询，获取更多与正版应用相关的样本。
 
 \begin{figure}[htbp]
 	\centering
@@ -153,15 +153,15 @@ RQ6：仿冒应用的上架行为是否有特征？
 
 第三个挑战，可利用Android签名证书机制（详见第二章）解决。
 对某个APK安装包而言，该机制提供了其被最后一次修改时的修改人信息。
-因此，对于任一个被搜索框架收集到的APK，均可归入以下三种情况：
+因此，对于任一个被搜索框架收集到的APK，均可归入以下四种情况：
 
 第一，该APK为正版应用，由正版开发者开发，也并未被篡改，应用证书与正版应用证书一致，是目标应用的某一版本；
-第二，该APK原本为正版应用，由正版开发者开发，但被仿冒应用开发者解包篡改，加入、删除或修改了部分数据，成为仿冒应用。
-然而，根据Android的打包流程与签名证书机制，仿冒应用开发者无法通过原版证书为该APK重新打包，因此该APK的应用证书被替换为仿冒应用开发者的证书；
-第三，该APK由仿冒应用开发者开发，由于仿冒应用开发者不具有正版开发者的私钥，不能为该APK签署正版应用证书，因此该APK具有仿冒应用开发者的证书。
+第二，该APK原本为正版应用，由正版开发者开发，使用旧版签名机制签署。由于APK采用了旧版签名，仿冒应用开发者利用漏洞篡改了部分数据，使样本成为仿冒应用，但应用证书并未被替换。
+第三，该APK原本为正版应用，被仿冒应用开发者解包篡改成为仿冒应用，但篡改是在解包后进行的，仿冒应用开发者无法通过原版证书为该APK重新打包，因此该APK的应用证书被替换为仿冒应用开发者的证书；
+第四，该APK由仿冒应用开发者开发，由于仿冒应用开发者不具有正版开发者的私钥，不能为该APK签署正版应用证书，因此该APK具有仿冒应用开发者的证书。
 
-综上，对于收集到的某一应用信息，若其证书信息可与目标应用的应用证书信息相对应，则可认为该应用为正版应用；
-相反，只要其应用证书信息与正版应用信息不符，无论其为被篡改的原正版应用，或是仿冒应用开发者从新开发的仿冒应用，均可划入仿冒应用范畴。
+由于旧版签名机制存在漏洞，作者无法直接判断使用旧版签名机制签署、同时具备正版证书信息的APK文件是否曾被篡改。
+然而，只要其应用证书信息与正版应用信息不符，无论其为被解包篡改的原正版应用，或是仿冒应用开发者从新开发的仿冒应用，均可划入仿冒应用范畴。
 
 % 本研究从360手机助手应用市场中随机挑选了856个应用，爬取这批应用的所有评论作为第三部分数据。
 % 国内应用商店市场监测报告~\cite{ChineseAppStoreReport}显示，360手机助手应用市场为国内占有市场份额最大的应用市场，以360手机助手为收集对象，可使数据具有一定代表性。
