--- a/edwin_2019/bib/REFERENCE.bib
+++ b/edwin_2019/bib/REFERENCE.bib
@@ -724,6 +724,12 @@ background
   title    = {{Mobile Gaming Apps Report}}
 }
 
+@online{CVE_2017_13156,
+  title    = {Janus漏洞（CVE-2017-13156）: 修改安卓app而不影响签名},
+  url      = {https://www.anquanke.com/post/id/89979},
+  citedate = {October 5, 2020}
+}
+
 @online{virustotal,
   title    = {VirusTotal},
   url      = {https://www.virustotal.com/},
@@ -1031,6 +1037,14 @@ background
   pages   = {224-233}
 }
 
+@inproceedings{ma2016libradar,
+  title     = {LibRadar: fast and accurate detection of third-party libraries in Android apps},
+  author    = {Ma, Ziang and Wang, Haoyu and Guo, Yao and Chen, Xiangqun},
+  booktitle = {Proceedings of the 38th international conference on software engineering companion},
+  pages     = {653--656},
+  year      = {2016}
+}
+
 @article{Zhou2012DissectingAM,
   title   = {Dissecting {Android} Malware: Characterization and Evolution},
   author  = {Yajin Zhou and Xuxian Jiang},
@@ -1064,4 +1078,14 @@ background
   pages     = {3587--3629},
   year      = {2019},
   publisher = {Springer}
+}
+
+# GIST
+@inproceedings{torralba2003context,
+  title     = {Context-based vision system for place and object recognition.},
+  author    = {Torralba, Antonio and Murphy, Kevin P and Freeman, William T and Rubin, Mark A and others},
+  booktitle = {ICCV},
+  volume    = {3},
+  pages     = {273--280},
+  year      = {2003}
 }
