--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -41,7 +41,7 @@
 因此，本节讨论与仿冒应用同属于移动灰黑产的重打包应用和恶意应用、以及其他移动应用领域相关方向的研究现状。
 
 \subsection{重打包应用的研究现状}
-\label{sec:repackaging}
+\label{sec:study_repackaging}
 重打包指恶意开发者对原应用解包、篡改内容之后再将应用重新打包的技术~\cite{khanmohammadi2019empirical}。
 重打包应用侵害了应用原作者的知识产权，甚至可能具有恶意行为，因此也属于移动黑灰产范畴。
 目前针对重打包应用的相关工作分为三类，分别为关于重打包的实证研究、针对重打包应用的检测和防止应用被重打包的研究。
@@ -225,7 +225,6 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 	      根据日常经验不难发现，在现阶段，用户在实际使用中经常能搜索到仿冒应用，应用市场对仿冒应用的筛选排除并未完善。
 	      恶意应用、重打包应用的研究发展表明，充分认识移动黑灰产应用特征对后续的对应检测、发现有明显促进作用。
 	      同理，作者希望可基于对仿冒应用进行的解读与画像，设计有效流程帮助各大市场梳理、排除仿冒应用。
-	      这是本文研究的另一重点，也是本文的创新点。
 \end{itemize}
 
 \section{本文主要工作}
@@ -245,8 +244,8 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 	\item \emph{提供实用建议} \quad
 	      基于在实证研究中的发现，本文分析了仿冒应用特征的可能成因与现有应用市场的不足之处，由此分别面向普通用户、应用市场和相关从业者提供了实用建议。
 
-	\item \emph{基于规则的仿冒应用检测框架} \quad
-	      依靠前序研究中对仿冒应用的理解与解读，作者设计并实现了基于规则的仿冒应用检测框架\mytool 。
+	\item \emph{仿冒应用检测框架} \quad
+	      依靠前序研究中对仿冒应用的理解与解读，作者设计并实现了仿冒应用检测框架\mytool 。
 
 \end{itemize}
 
@@ -315,7 +314,7 @@ Chen等人发布了漏洞检测工具Ausera~\cite{chen2018ausera}，该工具通
 
 \fullref{chp:discoveries_behavior} 则结合应用证书视角与结合时间维度视角进行探索，分析现有应用市场监管策略存在的不足，针对性地提出改善措施。
 
-以前两章实证研究所得的经验总结为规则，作者于\fullref{chp:framework_prototype} 提出并实现了一个基于规则的仿冒应用检测框架，然后基于新采集的应用数据对框架进行了有效性检验。
+以前两章实证研究所得的经验作参考，作者于\fullref{chp:framework_prototype} 提出并实现了一个仿冒应用检测框架，并基于新采集的应用数据对框架进行了有效性检验。
 
 % % 这些视角包括仿冒应用特征、影响仿冒应用数量的因素和仿冒应用的发展轨迹，每个视角都被进一步分解成多个不同的研究问题。
 % % 说明仿冒应用的数据收集方式并详细介绍其中三个组件（\componentA、\componentB 和\componentC）的设计与实现，
