--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -108,7 +108,7 @@
 %============================ 可以自定义文字块 ================================%
 \newcommand\mytool{FakeRevealer}
 \newcommand\componentA{过滤模块}
-\newcommand\componentB{鉴别模块模块}
+\newcommand\componentB{鉴别模块}
 \newcommand\componentC{代码分析模块}
 \newcommand\componentD{人工审查}
 \newcommand\componentE{应用特征库}
