--- a/edwin_2019/B2-ABSTRACT-E.tex
+++ b/edwin_2019/B2-ABSTRACT-E.tex
@@ -6,9 +6,11 @@
 \vspace{-5mm}
 
 
-Attribute to its characteristics like being open-source and widely used, Android owns a huge application ecosystem containing all sorts of benign software as well as malware, repackaging apps and fake apps.
-Thanks to the extensive previous researches, the mobile application industry has grown a full understanding of various malware and repackaging apps, corresponding detecting mechanisms and defensive measures are thus spawned.
-However, malware and repackaging apps have kept the focus of security-related Android researches in recent years, not much attention from academia was delivered to fake apps, placing a hidden danger in Android app security.
+Android, the well known operating system, is famous for its characteristics like open-source and being widely used.
+Attribute to these characteristics, it owns a huge application ecosystem containing all sorts of software including benign apps, malware, repackaging apps, as well as fake apps.
+Thanks to the extensive previous researches, the mobile application industry has grown a full understanding of some potentially harmful apps.\footnote{We use ``the industry'' to replace ``the mobile application industry'' for simplicity in the up-coming text.}
+A variety of mechanisms and measures aim at malware and repackaging apps detection have derived.
+However, whlie malware and repackaging apps keep holding the focus of security-related Android researches lately, not much attention from academia was delivered to fake apps, placing a hidden danger in Android app security.
 
 So far, there are three problems and challenges for fake app research:
 (1) There is not yet a publicly available large-scale fake app data set for researchers. The difficulty lies in that the scale and variety and representativeness of the data should be considered at the same time.
@@ -18,7 +20,7 @@ In order to obtain raw data on fake apps, an empirical study is adopted in this 
 
 
 \textbf{Ease on data shortage problem by constructing a large-scale fake app data set. }
-In this research, data was crawled from multiple sources like ``MyApp'' and ``Wandoujia''.
+In this research, data was crawled from multiple sources like \texttt{MyApp} and \texttt{Wandoujia}.
 More than 50, 000 app samples were kept eventually, providing strong data support for latter studies like app feature extraction and behavior analysis.
 
 \textbf{A comprehensive study on Android fake apps' characteristics. }
@@ -34,7 +36,7 @@ As shown by the empirical study, no satisfying countermeasure again fake apps ar
 In response to the situation, \mytool is introduced in this article to help achieve quick identifications on known original apps and the corresponding fake app samples.
 
 In summary, this study has collected a large-scale data set, empowers further exploration and studies in the future.
-Meanwhile, depending on these data, a comprehensive analysis is conducted on fake apps. 
+Meanwhile, depending on these data, a comprehensive analysis is conducted on fake apps.
 Our study put forward practical suggestions for both common users and app markets and propose a feasible framework for fake app detection to raise awareness of fake apps.
 
 {\sihao{\textbf{\newline Keywords:}}} \textit{Android Application, Fake App, Empirical Study, Data Analysis}
