--- a/edwin_2019/chapter-discoveries-behavior.tex
+++ b/edwin_2019/chapter-discoveries-behavior.tex
@@ -5,11 +5,11 @@
 研究内容主要为分析仿冒应用与开发者的对应关系、仿冒应用证书活跃期、仿冒应用上架速度等与开发者行为相关的方面。
 具体分析从三部分展开，结合应用证书视角与结合时间维度视角进行探索，对应以下三个研究问题：
 
-\begin{itemize}
-    \item RQ4：仿冒应用与开发者的对应关系如何？
-    \item RQ5：仿冒应用证书可以活跃多长时间？
-    \item RQ6：仿冒应用的上架行为是否有特征？
-\end{itemize}
+\textbf{ RQ4：仿冒应用与开发者的对应关系如何？}
+
+\textbf{ RQ5：仿冒应用证书可以活跃多长时间？}
+
+\textbf{ RQ6：仿冒应用的上架行为是否有特征？}
 
 \section{研究方法}
 \label{sec:behavior_method}
