--- a/edwin_2019/chapter-intro.tex
+++ b/edwin_2019/chapter-intro.tex
@@ -6,7 +6,7 @@
 随着移动市场于近年逐渐兴起，Android系统作为一个主流的移动端操作系统也在蓬勃发展。
 数据分析机构StatCounter资料显示，Android市场占有率自发布之日起就在逐年稳步增长。
 截至2020年，Android系统已经占据全球移动端市场份额的74.3\%~\cite{MobileOSMktShare}。
-与此同时，Android应用\footnote{应用、App在本文中均用以指代Android应用程序，不再区分}的数量也伴随着Android市场的蓬勃发展节节攀高。
+与此同时，Android应用的数量也伴随着Android市场的蓬勃发展节节攀高。\footnote{应用、App在本文中均用以指代Android应用程序，下文不再区分}
 仅Android官方的应用商店Google Play就在2017年中新上架了近一百万个可供下载的应用程序。
 虽然因为各种原因，Google Play上的应用数量在2018年有所回落，但如\autoref{fig:app_number}所示，应用市场上目前仍有近三百万个可用的应用程序，Android应用市场依然充满活力~\cite{StatistaAppNumber}。
 
@@ -17,7 +17,7 @@
 	\label{fig:app_number}
 \end{figure}
 
-随着Android移动应用行业快速发展，移动黑灰产\footnote{即移动端黑色产业与灰色产业，下文同}也逐渐活跃。
+随着Android移动应用行业快速发展，移动黑灰产（即移动端黑色产业与灰色产业，下文同）也逐渐活跃。
 黑灰产是以侵害用户、原应用作者或其他第三方利益为手段，凭此或通过其他可疑方式牟利的产业。
 一方面，随着开发移动应用的门槛逐渐下降，开发一个移动应用的成本已经普遍低于开发一个类似的桌面级应用所需的成本~\cite{wasserman2010software}；
 另一方面，移动应用功能在实现上的灵活性~\cite{storydroid}增加了移动应用的复杂度，针对黑灰产的分析与拦截面临着多重新挑战。
