--- a/edwin_2019/chapter-research-settings.tex
+++ b/edwin_2019/chapter-research-settings.tex
@@ -13,16 +13,22 @@
 一方面，探明仿冒应用生态的重要一步是了解其本身特征，以协助后续研究中对仿冒应用的自动化辨识和指导一般消费者鉴别仿冒应用。
 从直觉上看，仿冒应用与某一正版应用越相似，则越可能误导用户下载应用，使仿冒开发者获利。
 在这一方面，为了解、验证仿冒应用特征，本文从相似度、影响应用被仿冒程度的因素及仿冒应用行为三点出发，提出了以下问题：
-RQ1：仿冒应用和与之相对的正版应用的相似程度如何？
-RQ2：是否存在显著影响应用被仿冒的严重程度的单一因素？
-RQ3：仿冒应用作者制作出了怎样的仿冒应用？是否依然能提供原版应用的功能？
+
+\textbf{RQ1：仿冒应用和与之相对的正版应用的相似程度如何？}
+
+\textbf{RQ2：是否存在显著影响应用被仿冒的严重程度的单一因素？}
+
+\textbf{RQ3：仿冒应用作者制作出了怎样的仿冒应用？是否依然能提供原版应用的功能？}
 
 另一方面，仿冒应用的发布行为特征与仿冒应用本身特征同样重要，了解仿冒应用作者的发布特征有利于使市场方强化筛选、审查方案，防止仿冒应用流入市场。
 由于应用开发者与应用证书的一对多关系（详见第二章），本研究借助仿冒应用的证书信息探究仿冒应用作者的行为。
 在这一方面，为了解仿冒应用开发者行为特征，本文提出了以下研究问题：
-RQ4：仿冒应用与开发者的对应关系如何？
-RQ5：仿冒应用证书可以活跃多长时间？
-RQ6：仿冒应用的上架行为是否有特征？
+
+\textbf{RQ4：仿冒应用与开发者的对应关系如何？}
+
+\textbf{RQ5：仿冒应用证书可以活跃多长时间？}
+
+\textbf{RQ6：仿冒应用的上架行为是否有特征？}
 
 % 再进一步，应用市场中的用户反馈影响应用在市场上的分类排名，因此仿冒应用作者也可能操纵评论以增加自身应用的曝光率。
 % 对应地，本研究提出研究问题如下：
@@ -65,7 +71,7 @@ RQ6：仿冒应用的上架行为是否有特征？
 
 文献~\cite{kitchenham2002preliminary}指出，实证研究需要确保数据的准确性与全面性。
 若在市场直接中随机挑选应用，将难以解释搜集到的应用是正版或是仿冒应用，进而不能保证数据的准确性，随机选取法并不适用于正版应用的选取。
-因此，本研究参考了数据平台易观千帆的月度App排行榜\footnote{\url{https://qianfan.analysys.cn/refine/view/rankApp/rankApp.html}}。
+因此，本研究参考了数据平台易观千帆的月度App排行榜~\cite{yiguanqianfan}。
 该排行榜对超过1200个主流应用中的用户分享数据进行分析，汇总成应用热度（月度活跃用户数），按热度对应用进行排行。
 一方面，该排行榜的数据来源是各应用``应用体验计划''中搜集所得的数据，数据本身具有一定真实性，可满足文献的准确性要求；
 另一方面，排行榜中的应用均为主流应用，由知名度较高的开发者（如腾讯、百度、阿里巴巴等）开发，可认为排行榜上的应用均为正版应用，免去需要对搜集到的目标应用进行甄别的步骤；
@@ -123,7 +129,7 @@ RQ6：仿冒应用的上架行为是否有特征？
 	\item 对于收集到的大量数据，研究者需要一个轻量级的解决方案快速判断获得的App样本为正版应用或是仿冒应用。
 \end{itemize}
 
-为应对第一个挑战，作者与工业界合作，利用犇众信息公司的Janus平台\footnote{此处平台与\secref{sec:signature}中提及的Android漏洞同名，但两者无直接关联，请注意区分。后文的``Janus平台''均指本平台，而``Janus漏洞''则特指Android漏洞。}对各大应用商店进行样本爬取，获取应用样本信息。
+为应对第一个挑战，作者与工业界合作，利用犇众信息公司的Janus平台对各大应用商店进行样本爬取，获取应用样本信息。\footnote{此处平台与\secref{sec:signature}中提及的Android漏洞同名，但两者无直接关联，请注意区分。后文的``Janus平台''均指本平台，而``Janus漏洞''则特指Android漏洞。}
 该平台自2017年起就开始对各大应用商店的App进行样本收集，可向用户提供各项App信息。
 如\autoref{fig:Janus-data}显示，Janus平台至今已收集到上千万个App样本，可满足本研究数据采集需求。
 除样本信息外，Janus平台也提供按规则搜索功能，用户可创建规则过滤平台中的应用数据，以获取所需应用App样本。
@@ -138,7 +144,7 @@ RQ6：仿冒应用的上架行为是否有特征？
 \end{figure}
 
 
-为应对第二个挑战，本研究提出了基于广度优先搜索（Breadth-First Search，简称BFS）算法的搜索框架\autoref{fig:FakeRevealer}。
+为应对第二个挑战，本研究提出了基于广度优先搜索（Breadth-First Search，简称BFS）算法的搜索框架（见\autoref{fig:FakeRevealer}）。
 具体地，对于每一款目标应用的收集流程分为三个部分：先以正版应用样本的\emph{包名}和\emph{应用名}作为查询条件放入迭代搜索器，迭代搜索器发出查询请求，从Janus平台中收集与目标应用相关的所有App样本，提取出样本的相关数据返回至应用收集器;
 其后，应用收集器将数据转移至应用过滤器，利用过滤器判断收集到的应用数据源于正版应用或仿冒应用，保存仿冒应用数据，提取出正版应用的\emph{包名}和\emph{应用名}；
 最后，将上一步中获得的新的正版应用信息（\emph{包名}和\emph{应用名}）再次放入迭代搜索器，开始下一次循环，从Janus平台中进行查询，获取更多与正版应用相关的样本。
@@ -155,13 +161,14 @@ RQ6：仿冒应用的上架行为是否有特征？
 对某个APK安装包而言，该机制提供了其被最后一次修改时的修改人信息。
 因此，对于任一个被搜索框架收集到的APK，均可归入以下四种情况：
 
-第一，该APK为正版应用，由正版开发者开发，也并未被篡改，应用证书与正版应用证书一致，是目标应用的某一版本；
-第二，该APK原本为正版应用，由正版开发者开发，使用旧版签名机制签署。由于APK采用了旧版签名，仿冒应用开发者利用漏洞篡改了部分数据，使样本成为仿冒应用，但应用证书并未被替换。
-第三，该APK原本为正版应用，被仿冒应用开发者解包篡改成为仿冒应用，但篡改是在解包后进行的，仿冒应用开发者无法通过原版证书为该APK重新打包，因此该APK的应用证书被替换为仿冒应用开发者的证书；
-第四，该APK由仿冒应用开发者开发，由于仿冒应用开发者不具有正版开发者的私钥，不能为该APK签署正版应用证书，因此该APK具有仿冒应用开发者的证书。
+第一，该APK为正版应用，由正版开发者开发，也并未被篡改，应用证书与正版应用证书一致，是目标应用的某一版本（正版）；
+第二，该APK原本为正版应用，由正版开发者开发，使用旧版签名机制签署。由于APK采用了旧版签名，仿冒应用开发者利用漏洞篡改了部分数据，使样本成为仿冒应用，但应用证书并未被替换（仿冒）；
+第三，该APK原本为正版应用，被仿冒应用开发者解包篡改成为仿冒应用，但篡改是在解包后进行的，仿冒应用开发者无法通过原版证书为该APK重新打包，因此该APK的应用证书被替换为仿冒应用开发者的证书（仿冒）；
+第四，该APK由仿冒应用开发者开发，由于仿冒应用开发者不具有正版开发者的私钥，不能为该APK签署正版应用证书，因此该APK具有仿冒应用开发者的证书（仿冒）。
 
-由于旧版签名机制存在漏洞，作者无法直接判断使用旧版签名机制签署、同时具备正版证书信息的APK文件是否曾被篡改。
+旧版签名机制存在漏洞，无法直接判断使用旧版签名机制签署、同时具备正版证书信息的APK文件是否曾被篡改。
 然而，只要其应用证书信息与正版应用信息不符，无论其为被解包篡改的原正版应用，或是仿冒应用开发者从新开发的仿冒应用，均可划入仿冒应用范畴。
+因此，本文在收集数据时，针对上述情况的第三、四种APK进行收集。
 
 % 本研究从360手机助手应用市场中随机挑选了856个应用，爬取这批应用的所有评论作为第三部分数据。
 % 国内应用商店市场监测报告~\cite{ChineseAppStoreReport}显示，360手机助手应用市场为国内占有市场份额最大的应用市场，以360手机助手为收集对象，可使数据具有一定代表性。
