--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -181,9 +181,9 @@
     \fi
 \fi
 
-% 基本信息
-\newcommand{\TheisName}[0]{基于Android仿冒应用的大规模实证研究}
-\newcommand{\TheisNameEn}[0]{A Large-Scale Empirical Study on Android Fake Apps}
+% 基本信息\documentclass[options]{class}
+\newcommand{\TheisName}[0]{基于Android仿冒应用的实证研究}
+\newcommand{\TheisNameEn}[0]{An Empirical Study on Android Fake Apps}
 
 \def\yearOfGrduation{2021} % 毕业年份
 \def\monthOfGraduationNum{12} % 毕业月份
