Bug fix on grduation time 关闭查重开关。打开盲审开关。

--- a/edwin_2019/main.tex
+++ b/edwin_2019/main.tex
@@ -169,10 +169,10 @@
 \newcommand{\Line}[1]{ \textit{ Line .#1}}
 
 % 匿名开关
-% \newcommand{\anonymous}[1]{\phantom{ #1 }}
+\newcommand{\anonymous}[1]{\phantom{ #1 }}
 
 % 查重开关
-\newcommand{\duplicationCheck}[1]{\phantom{ #1 }}
+% \newcommand{\duplicationCheck}[1]{\phantom{ #1 }}
 
 % 查重自带匿名
 \ifdefined \duplicationCheck
@@ -186,7 +186,7 @@
 \newcommand{\TheisNameEn}[0]{An Empirical Study on Android Fake Apps}
 
 \def\yearOfGrduation{2021} % 毕业年份
-\def\monthOfGraduationNum{12} % 毕业月份
+\def\monthOfGraduationNum{1} % 毕业月份
 \def\monthOfGraduationEng{January} % 毕业月份 (英文)
 \def\articleCategory{华东师范大学硕士学位论文} % 论文类型
 
